# chessig

./: Cargo.toml
src/: logs.rs  main.rs  mathutils.rs  uci.rs
src/core/: mod.rs
src/core/eval/: evaluation.rs  mod.rs  piece_square_tables.rs
src/core/heuristics/: history_heuristics.rs  killer_moves.rs  mod.rs  move_ordering.rs
src/core/openings/: mod.rs
src/core/search/: extensions.rs  mod.rs  search.rs  transposition_table.rs
src/testing/: mod.rs  perf_test.rs  perft.rs  selfplay.rs
