[package]
name = "chessig2"
version = "0.1.0"
edition = "2021"

[dependencies]
vampirc-uci =   "0.11.1"
log = "0.4.22"
log4rs = "1.3.0"
pleco = { path = "../pleco" }
rand = { version = "0.9.0-alpha.2", features = ["default", "small_rng"] }
lazy_static = "1.5.0"
pgn-reader = "0.26.0"
shakmaty = "0.27.1"
get-size = "0.1.4"

